<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Widget" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
	<ImageView 
	    android:id="@+id/background"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:src="@color/black_alfa"
	    android:contentDescription="@string/activity_background">
	    </ImageView>
    
	<TextView
	    android:id="@+id/time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:gravity="center_horizontal"
	    android:layout_marginTop="@dimen/widget_HourMinSec_MarginTop"
	    android:text="@string/error_wait"
	    android:textColor="@android:color/white"
	    android:shadowColor="@color/black_alfa"
	    android:shadowDx="-3"
	    android:shadowDy="3"
	    android:shadowRadius="0.02"
	    android:textSize="30dp" />

	<TextView
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="@dimen/widget_Title_MarginTop"
	    android:text="@string/titte"
	    android:textStyle="bold"
	    android:textColor="@android:color/white"
	    android:shadowColor="@color/black_alfa"
	    android:shadowDx="-3"
	    android:shadowDy="3"
	    android:shadowRadius="0.02"
	    android:textSize="18dp" />
	
	<TextView
	    android:id="@+id/day"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:textStyle="italic"
	    android:layout_marginRight="@dimen/widget_Day_MarginRight"
	    android:layout_marginTop="@dimen/widget_MonthDay_MarginTop"
	    android:text="@string/day"
	    android:textColor="@android:color/white"
	    android:textSize="@dimen/widget_MonthDay_TextSize"
	    android:shadowColor="@color/black_alfa"
	    android:shadowDx="-3"
	    android:shadowDy="3"
	    android:shadowRadius="0.02" />

	<TextView
	    android:id="@+id/month"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
		android:textStyle="italic"
	    android:layout_marginLeft="@dimen/widget_Month_MarginLeft"
	    android:layout_marginTop="@dimen/widget_MonthDay_MarginTop"
	    android:text="@string/month"
	    android:textColor="@android:color/white"
	    android:shadowColor="@color/black_alfa"
	    android:shadowDx="-3"
	    android:shadowDy="3"
	    android:shadowRadius="0.02"
	    android:textSize="@dimen/widget_MonthDay_TextSize" />

</RelativeLayout>